--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/etchasketch.css" />
     <script src="./scripts/etchasketch.js" defer></script>
-    <title>Etch-A-Skecth Exercise</title>
+    <title>Etch-A-Sketch Exercise</title>
   </head>
   <body></body>
 </html>
