Create slider and gameboard
Slider controls board size, clearing and rebuilding board when slider
value change. Slider increments in values of 16 with a min board size of
16 and a max board size of 16x10 (160).

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/etchasketch.css" />
     <script src="./scripts/etchasketch.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/@jaames/iro@5" defer></script>
     <title>Etch-A-Sketch Exercise</title>
   </head>
   <body></body>
