--- a/index.html
+++ b/index.html
@@ -5,15 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/etchasketch.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Freehand&display=swap"
+      rel="stylesheet"
+    />
     <script src="./scripts/etchasketch.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@jaames/iro@5"></script>
     <title>Etch-A-Sketch Exercise</title>
   </head>
   <body>
-    <div id="frame">
-      <div id="tools">
-        <div id="picker"></div>
+    <h1 id="title">
+      JavaSketch
+
+      <div id="frame">
+        <div id="tools">
+          <div id="picker"></div>
+        </div>
       </div>
-    </div>
+    </h1>
   </body>
 </html>
