Finalize game functionality and styling
Ton of updates (I need to remember to commit more often!):

- Page styling - Laid out all the page elements to work on a browser
- Rainbow functionality - Toggleable button for rainbow painting
- Gradient button settings - Neat stuff from SO with linear-Gradient
- logical positioning of html
- general comments cleaned up and code (sort of) organized

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <title>Etch-A-Sketch Exercise</title>
   </head>
   <body>
-    <h1 id="title">
-      JavaSketch
-
-      <div id="frame">
-        <div id="tools">
-          <div id="picker"></div>
+    <h1 id="title">JavaSketch</h1>
+    <div id="game">
+      <div id="tools">
+        <div id="picker">
+          <h2>Adjust Pen Color</h2>
         </div>
       </div>
-    </h1>
+      <div id="frame"></div>
+    </div>
   </body>
 </html>
