--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Etch-A-Sketch Exercise</title>
   </head>
   <body>
-    <h1 id="title">JavaSketch</h1>
+    <h1 id="title">Jav-A-Sketch</h1>
     <div id="game">
       <div id="tools">
         <div id="picker">
